Attempted to improve functionality when SSH functions hang due to root loop issue

--- a/Source/VeriStand Console Viewer.ini
+++ b/Source/VeriStand Console Viewer.ini
@@ -1,5 +1,8 @@
 [UI]
 ConsoleFont = "Consolas"
-ConsoleFontSize = 15    
+ConsoleFontSize = 16    
 ConsoleBGColor = 0    
 ConsoleTextColor = 2284544    
+
+[Debug]
+Debug = False
